WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122243
[css-shapes] shape-outside does not properly handle the container and the float having different writing modes
https://bugs.webkit.org/show_bug.cgi?id=122243
Summary
[css-shapes] shape-outside does not properly handle the container and the flo...
Bem Jones-Bey
Reported
2013-10-02 15:22:03 PDT
[css-shapes] shape-outside does not properly handle the container and the float having different writing modes
Attachments
Patch
(5.67 KB, patch)
2013-10-02 15:28 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Patch
(6.06 KB, patch)
2013-10-02 15:53 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2013-10-02 15:28:30 PDT
Created
attachment 213207
[details]
Patch Use the proper writing mode when computing margins and widths.
Alexandru Chiculita
Comment 2
2013-10-02 15:36:40 PDT
Comment on
attachment 213207
[details]
Patch r=me
Zoltan Horvath
Comment 3
2013-10-02 15:40:25 PDT
Comment on
attachment 213207
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=213207&action=review
3 small comments below, otherwise looks good to me.
> Source/WebCore/rendering/shapes/ShapeOutsideInfo.cpp:70 > + m_leftMarginBoxDelta = segments[0].logicalLeft + containingBlock->marginStartForChild(m_renderer);
We should use segments.first().logicalLeft here.
> Source/WebCore/rendering/shapes/ShapeOutsideInfo.cpp:71 > + m_rightMarginBoxDelta = segments[segments.size()-1].logicalRight - containingBlock->logicalWidthForChild(m_renderer) - containingBlock->marginEndForChild(m_renderer);
We should use segments.last().logicalRight here.
> LayoutTests/fast/shapes/shape-outside-floats/shape-outside-floats-different-writing-modes-expected.html:22 > +</body>
I would put a link to the bug # and the title.
Bem Jones-Bey
Comment 4
2013-10-02 15:53:56 PDT
Created
attachment 213209
[details]
Patch Update for comments
WebKit Commit Bot
Comment 5
2013-10-02 16:25:57 PDT
Comment on
attachment 213209
[details]
Patch Clearing flags on attachment: 213209 Committed
r156806
: <
http://trac.webkit.org/changeset/156806
>
WebKit Commit Bot
Comment 6
2013-10-02 16:25:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug